--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prettier": "prettier --write \"src/**/*.{js,ts,tsx,jsx,json,md}\"",
-    "db": "rimraf ./src/domain/entity && typeorm-model-generator -h aws-0-us-east-1.pooler.supabase.com -d postgres -p 5432 -u postgres.lmfjtyfjlocijyanxwdt -x PatronesProyecto5 -e postgres -o ./src/domain/entity --noConfig true --ce pascal --cp camel"
+    "db": "rimraf ./src/entity && typeorm-model-generator -h aws-0-us-east-1.pooler.supabase.com -d postgres -p 5432 -u postgres.lmfjtyfjlocijyanxwdt -x PatronesProyecto5 -e postgres -o ./src/entity --noConfig true --ce pascal --cp camel"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "postgres": "^3.4.4",
