--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prettier": "prettier --write \"src/**/*.{js,ts,tsx,jsx,json,md}\"",
-    "db": "rimraf ./src/entity && typeorm-model-generator -h aws-0-us-east-1.pooler.supabase.com -d postgres -p 5432 -u postgres.lmfjtyfjlocijyanxwdt -x PatronesProyecto5 -e postgres -o ./src/entity --noConfig true --ce pascal --cp camel"
+    "db": "rimraf ./src/entities && typeorm-model-generator -h aws-0-us-east-1.pooler.supabase.com -d postgres -p 5432 -u postgres.lmfjtyfjlocijyanxwdt -x PatronesProyecto5 -e postgres -o ./src/entities --noConfig true --ce pascal --cp camel"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -39,6 +39,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
